# Fall_Of_Ferald

./: .gitignore  CMakeLists.txt  README.md
Dialogue/: test.txt
Stats/: base.txt  growths.txt  mage.txt  tank.txt  warrior.txt
assets/images/interface/: Dialogue.psd  DialogueBox.psd  tooltip.psd
dialogue/: old.txt  test.txt
levels/: friendlyChars.txt
levels/example/: OLDmap.txt  boxMap.txt  clearMap.txt  lessoldmap.txt  map.txt  units.txt
src/: AI.cpp  AI.h  Actor.cpp  Actor.h  Asset.h  CMakeLists.txt  DebugLogger.cpp  DebugLogger.h  DialogueBox.cpp  DialogueBox.h  Game.cpp  Game.h  ImageManager.cpp  ImageManager.h  InputManager.cpp  InputManager.h  Item.cpp  Item.h  Level.cpp  Level.h  Move.cpp  Move.h  Pathfinder.cpp  Pathfinder.h  Tile.cpp  Tile.h  TileHighlight.cpp  TileHighlight.h  Tooltip.cpp  Tooltip.h  Unit.cpp  Unit.h  UserInterface.cpp  UserInterface.h  main.cpp
